--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
     "babel-eslint": "^8.2.5",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
